--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,50 @@
-.App {
-  text-align: center;
+.container {
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-header {
+.container > .calculator {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  height: 20vh;
+  width: 100vw;
+  text-align: center;
+  background-color: #EE6;
+}
+
+.container > .calculator > .input {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100vw;
+}
+
+.container > .calculator > .input > #input {
+  margin: 0 10px;
+  border: 1px solid white;
+  font-size: 1.5rem;
+  text-align: center;
+  width: 40vw;
+}
+
+.container > .calculator > .input > #calculate {
+  height: 100%;
+  border: 1px solid white;
+  background-color: white;
+  font-size: 1.5rem;
+  width: 40vw;
+}
+
+.container > .calculator > #result {
+  font-size: 2.5rem;
+  height: 2.5rem;
+}
+
+.container > .values {
+  display: flex;
+  height: 80vh;
+  width: 100vw;
   background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
 }
