--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   width: 100vw;
 }
 
-.container > .calculator > .input > #input {
+.container > .calculator > .input > #d {
   margin: 0 10px;
   border: 1px solid white;
   font-size: 1.5rem;
